--- a/app/src/main/res/layout/item_row_movie.xml
+++ b/app/src/main/res/layout/item_row_movie.xml
@@ -26,8 +26,8 @@
             android:padding="10dp"
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
-            card_view:constraintBottom_toBottomOf="parent"
-            tools:src="@drawable/avatar"
+            card_view:layout_constraintBottom_toBottomOf="parent"
+            tools:src="@tools:sample/avatars"
             />
         
         <TextView
@@ -42,10 +42,11 @@
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/iv_card"
             card_view:layout_constraintTop_toTopOf="@+id/iv_card"
-            tools:text="Hello World"
+            tools:text="@string/movie_name"
             />
 
         <TextView
+            android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -55,7 +56,7 @@
             card_view:layout_constraintStart_toEndOf="@+id/iv_card"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintBottom_toBottomOf="parent"
-            tools:text="asdasdasdasdasdasdasdasdasd"
+            tools:text="@string/movie_des"
 
             />
 
