--- a/app/src/main/res/layout/item_row_movie.xml
+++ b/app/src/main/res/layout/item_row_movie.xml
@@ -22,8 +22,9 @@
             android:id="@+id/iv_card"
             android:layout_width="90dp"
             android:layout_height="90dp"
+            android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:padding="10dp"
+            android:padding="7dp"
             card_view:layout_constraintTop_toTopOf="parent"
             card_view:layout_constraintStart_toStartOf="parent"
             card_view:layout_constraintBottom_toBottomOf="parent"
@@ -34,11 +35,12 @@
             android:id="@+id/tv_card"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
             android:layout_toEndOf="@+id/iv_card"
             android:textSize="16sp"
+            android:maxLines="1"
             card_view:layout_constraintEnd_toEndOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/iv_card"
             card_view:layout_constraintTop_toTopOf="@+id/iv_card"
@@ -49,6 +51,7 @@
             android:id="@+id/tv_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="start"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:textSize="12sp"
